--- a/src/OpenFinEmbed.mxml
+++ b/src/OpenFinEmbed.mxml
@@ -26,7 +26,7 @@
             RuntimeConfiguration.enableFileLogging("testAirApp.log"); // in %LocalAppData%/logs
             RuntimeConfiguration.enableTraceLogging();
 
-//            RuntimeConfiguration.enableNativeExtensionLogging("C:\\AirLogs\\native.log");
+//            RuntimeConfiguration.enableNativeExtensionLogging("C:\\AirLogs\\native.log", false);
         }
 
         protected function added_to_stage_handler(event: Event): void {
