ADAP-100: updated Air adapter

--- a/src/ChildWindow.mxml
+++ b/src/ChildWindow.mxml
@@ -44,7 +44,8 @@
             winOpts.contextMenu = true;
             winOpts.saveWindowState = false;
             appOpts.mainWindowOptions = winOpts;
-            cw.capture(appOpts, captureOptions);
+            captureOptions.applicationOptions = appOpts;
+            cw.capture(captureOptions);
         }
 
         ]]></fx:Script>
